# Vidhi-AI

./: .gitignore  README.md  generate_b01_1.py
backend/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  alembic.ini  backend_inventory.json  docker-compose.yml  pyproject.toml  requirements.txt  tmp_parser.md
backend/app/: main.py
backend/app/activity/: service.py
backend/app/agents/: bootstrap.py
backend/app/ai/: config.py
backend/app/analytics/: case_analytics.py
backend/app/audit/: audit_log.py
backend/app/auth/: dependencies.py  password.py  rbac.py  security.py  session.py  session_rotation.py  session_validation.py  token_hash.py
backend/app/automation/: reminder_service.py
backend/app/builder/: __init__.py  bootstrap.py  context.py  dispatcher.py  engine.py  providers.py  runtime.py  services.py
backend/app/constants/: invoice_status.py
backend/app/core/: config.py  logging.py  startup_validation.py
backend/app/court/: api.py  captcha.py  models.py  parser.py  provider.py  schemas.py  service.py  session.py
backend/app/database/: database.py  init_db.py
backend/app/dependencies/: database.py
backend/app/document_processing/: __init__.py  config.py  (+9 more)
backend/backend/: bootstrap.html
backend/config/: default_invoice.json
backend/legal_corpus/: sample_judgment.txt
backend/logs/: metrics.json
backend/migrations/: env.py  env.py.bak
backend/reports/: architecture_audit.json  provider_dependency_graph.json
backend/scripts/: backup.py  create_admin.py  create_refresh_token_model.py  patch_cases_rbac.py  patch_refresh_auth.py  restore.py  verify_backup.py
backend/tests/: test_ai.py  test_ai_architecture.py  test_ai_config.py  test_ai_memory.py  test_ai_platform_architecture.py  test_ai_rag.py  test_api.py  test_auth.py  test_auth_dependency.py  test_case_crud.py  test_case_module.py  test_case_schema.py  test_case_search.py  test_case_statistics.py  test_case_status.py  test_case_validation.py  test_cases.py  test_clients.py  test_corpus_manager.py  test_court_architecture.py  test_dashboard.py  test_document_features.py  test_document_module.py  test_document_processing.py  test_document_processing_pipeline.py  test_drafting.py  test_embedding_registry.py  test_embedding_selector.py  test_health.py  test_hybrid_search.py  test_jobs.py  test_legal_architecture.py  test_legal_engine.py  test_legal_parser.py  test_login.py  test_login_flow.py  test_mock_embedding.py  test_mock_provider.py  test_nvidia_provider.py  test_ollama_provider.py  (+21 more)
builder/: .env.example  .gitignore  README.md  pyproject.toml
(+1129 files in other folders)
