[project]
name = "vidhi-ai"
version = "0.1.0-alpha.1"
description = "Production-grade Legal AI Platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Shravan" }
]

dependencies = [
    "fastapi==0.139.0",
    "uvicorn==0.51.0",
    "sqlalchemy==2.0.51",
    "alembic==1.18.5",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "python-dotenv==1.2.2",
    "python-jose==3.5.0",
    "python-multipart==0.0.32",
    "passlib==1.7.4",
    "httpx==0.28.1",
    "rich==15.0.0",
    "loguru==0.7.3",
    "pypdf==6.14.2",
    "openai==2.44.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
