[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vidhi-builder"
version = "0.1.0"
description = "Production AI Software Engineering Platform"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary"}
authors = [
    {name = "Shravan"}
]

dependencies = [
    "typer>=0.16",
    "rich>=14.0",
    "pydantic>=2.11",
    "pydantic-settings>=2.10",
    "networkx>=3.5",
    "watchfiles>=1.1",
    "sqlalchemy>=2.0",
    "alembic>=1.16",
    "orjson>=3.11",
    "httpx>=0.28",
    "python-dotenv>=1.1",
    "loguru>=0.7",
    "psutil>=7.0",
    "pyyaml>=6.0"
]

[project.scripts]
vidhi-builder = "builder.__main__:main"

[tool.setuptools]
package-dir = {""="builder"}

[tool.setuptools.packages.find]
where=["builder"]
